--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -1,3 +1,19 @@
 {{- /* Comments area start */ -}}
 {{- /* to add comments read => https://gohugo.io/content-management/comments/ */ -}}
+<script src="https://giscus.app/client.js"
+        data-repo="EdgarDing77/EdgarDing77.github.io"
+        data-repo-id="R_kgDOGtgebg"
+        data-category="Announcements"
+        data-category-id="DIC_kwDOGtgebs4Ccjcj"
+        data-mapping="pathname"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="top"
+        data-theme="preferred_color_scheme"
+        data-lang="zh-CN"
+        data-loading="lazy"
+        crossorigin="anonymous"
+        async>
+</script>
 {{- /* Comments area end */ -}}
